fix link alignment

--- a/css/oldie.css
+++ b/css/oldie.css
@@ -666,6 +666,7 @@ a {
 	text-decoration: none;
 	font-weight: 600;
 	letter-spacing: 0.02em;
+	vertical-align: top;
 	transition-duration: 0.16s;
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 	transition-property: all;
@@ -1220,7 +1221,7 @@ a:hover > img {
 }
 
 .entry-title .doc-icon {
-    margin-left: auto;
+	margin-left: auto;
 }
 
 .o-cell > .v-icon {
@@ -1474,7 +1475,6 @@ a[href*="tel:"],
 a[href*="mailto:"] {
 	display: inline-flex;
 	align-items: center;
-	vertical-align: middle;
 }
 
 .u-list-naked,
