--- a/src/styles/objects.icons.css
+++ b/src/styles/objects.icons.css
@@ -22,7 +22,7 @@
 }
 
 .entry-title .doc-icon {
-    margin-left: auto;
+	margin-left: auto;
 }
 
 .o-cell > .v-icon {
@@ -207,5 +207,4 @@ a[href*="tel:"],
 a[href*="mailto:"] {
 	display: inline-flex;
 	align-items: center;
-	vertical-align: middle;
 }
