--- a/style.css
+++ b/style.css
@@ -679,6 +679,7 @@ a {
 	text-decoration: none;
 	font-weight: 600;
 	letter-spacing: 0.02em;
+	vertical-align: top;
 	transition-duration: 0.16s;
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 	transition-property: all;
@@ -1515,7 +1516,6 @@ a[href*="mailto:"] {
 	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
-	vertical-align: middle;
 }
 
 .u-list-naked,
